[gd_scene load_steps=3 format=3 uid="uid://cb0ngd50upr35"]

[ext_resource type="Script" uid="uid://du8u5eedcwe6o" path="res://script/ui_part/menu_battle.gd" id="1_hc8yx"]
[ext_resource type="Texture2D" uid="uid://b8tc344ldgexy" path="res://image/arrow.png" id="1_q3gcc"]

[node name="MenuBattle" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_hc8yx")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 320.0
offset_top = 160.0
offset_right = 960.0
offset_bottom = 560.0

[node name="TextPaused" type="Label" parent="."]
layout_mode = 0
offset_left = 340.0
offset_top = 180.0
offset_right = 590.0
offset_bottom = 225.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "Paused"

[node name="TextResume" type="Label" parent="."]
layout_mode = 0
offset_left = 340.0
offset_top = 260.0
offset_right = 590.0
offset_bottom = 305.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "Resume"

[node name="TextSurrender" type="Label" parent="."]
layout_mode = 0
offset_left = 340.0
offset_top = 340.0
offset_right = 590.0
offset_bottom = 385.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "Surrender"

[node name="TextToTitle" type="Label" parent="."]
layout_mode = 0
offset_left = 340.0
offset_top = 420.0
offset_right = 590.0
offset_bottom = 465.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "Exit to Title"

[node name="TextQuit" type="Label" parent="."]
layout_mode = 0
offset_left = 340.0
offset_top = 500.0
offset_right = 590.0
offset_bottom = 545.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "Exit"

[node name="Arrow" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 240.0
offset_top = 280.0
offset_right = 240.0
offset_bottom = 280.0
texture = ExtResource("1_q3gcc")
